vs-50-50.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
  - "*"
  gateways:
  - echo-gateway
  http:
  - route:
    - destination:
        host: echo
        subset: v1
      weight: 50
    - destination:
        host: echo
        subset: v2
      weight: 50
    timeout: 5s
